[gd_scene format=3 uid="uid://q4fwfaiyq0ly"]

[ext_resource type="Script" uid="uid://iwluqq1nhh1l" path="res://UI/main.gd" id="1_vnck2"]
[ext_resource type="AudioStream" uid="uid://c57orqxi362na" path="res://Assets/Audio/drum-trailer-intro-263643.mp3" id="2_a2b50"]
[ext_resource type="AudioStream" uid="uid://teaeb5w5bwc5" path="res://Assets/Audio/CONTENT ID - intense-trailer-cinematic-142691.mp3" id="3_deq60"]
[ext_resource type="AudioStream" uid="uid://dixvy42m01p23" path="res://Assets/Audio/computer-mouse-click.mp3" id="3_uw6j2"]
[ext_resource type="AudioStream" uid="uid://dmuocidc130k3" path="res://Assets/Audio/CONTENT ID - suspense-tension-background-music-323181.mp3" id="4_7w1xu"]
[ext_resource type="AudioStream" uid="uid://bvon7hmeeu8ob" path="res://Assets/Audio/sam-backraund-music-5-244020.mp3" id="5_ih1d4"]
[ext_resource type="AudioStream" uid="uid://ds0whwuk0fp6v" path="res://Assets/Audio/TensionBuilder.mp3" id="6_p2g6k"]
[ext_resource type="AudioStream" uid="uid://dpf3yje2dqlx4" path="res://Assets/Audio/moonlight-orchestral-track-in-e-major-120bpm-12171.mp3" id="7_nkf2w"]
[ext_resource type="AudioStream" uid="uid://dg6p34ag32hag" path="res://Assets/Audio/run-like-fire-357231.mp3" id="8_vfltm"]
[ext_resource type="FontFile" uid="uid://cvn4vhcn5c1ii" path="res://Assets/Fonts/Beyond Wonderland.ttf" id="9_a2b50"]
[ext_resource type="Theme" uid="uid://ce3a5c6k6j0ok" path="res://mainTheme.tres" id="9_p2g6k"]
[ext_resource type="Script" uid="uid://cqeu5hsavms1y" path="res://UI/add_rem.gd" id="12_7w1xu"]
[ext_resource type="Script" uid="uid://bebgbjoi8ub2w" path="res://UI/hosts.gd" id="13_ih1d4"]
[ext_resource type="Script" uid="uid://dftvisxkb41iq" path="res://UI/join.gd" id="14_p2g6k"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_vnck2"]
sky_top_color = Color(0.50980395, 0.14901961, 0.45882353, 1)
sky_horizon_color = Color(0.5301941, 0.41981176, 0.50429726, 1)
ground_bottom_color = Color(0.2283001, 0.14755505, 0.17569315, 1)
ground_horizon_color = Color(0.5301941, 0.41981176, 0.50429726, 1)
energy_multiplier = 5.0

[sub_resource type="Sky" id="Sky_emhnf"]
sky_material = SubResource("ProceduralSkyMaterial_vnck2")

[sub_resource type="Environment" id="Environment_uw6j2"]
background_mode = 2
sky = SubResource("Sky_emhnf")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_n87jj"]
size = Vector3(1.77, 0.01, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fmhtc"]
bg_color = Color(0.6, 0.6, 0.6, 0.29411766)
skew = Vector2(0.5, 0)
border_width_left = 15
border_width_top = 1
border_width_right = 10
border_width_bottom = 1
border_color = Color(0.7007377, 0.8065815, 0.97720724, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 1
corner_radius_bottom_right = 10
corner_radius_bottom_left = 1
corner_detail = 20
expand_margin_left = 5.0
expand_margin_right = 5.0
shadow_size = 5
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a2b50"]
bg_color = Color(0.32172772, 0.32172805, 0.32172796, 1)
skew = Vector2(0.5, 0)
border_width_left = 15
border_width_top = 1
border_width_right = 10
border_width_bottom = 1
border_color = Color(0.7007377, 0.8065815, 0.97720724, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 1
corner_radius_bottom_right = 10
corner_radius_bottom_left = 1
corner_detail = 20
expand_margin_left = 5.0
expand_margin_right = 5.0
shadow_size = 5
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7w1xu"]
bg_color = Color(0.6, 0.6, 0.6, 0.6)
skew = Vector2(0.5, 0)
border_width_left = 15
border_width_top = 1
border_width_right = 10
border_width_bottom = 1
border_color = Color(0.7007377, 0.8065815, 0.97720724, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 1
corner_radius_bottom_right = 10
corner_radius_bottom_left = 1
corner_detail = 20
expand_margin_left = 5.0
expand_margin_right = 5.0
shadow_size = 5
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ih1d4"]

[sub_resource type="Animation" id="Animation_emhnf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.5707964, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vnck2"]
resource_name = "Spin"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4, 2),
"transitions": PackedFloat32Array(1.8660663, 1, 1),
"update": 0,
"values": [Vector3(1.5707964, 0, 0), Vector3(1.5707964, 1.5707964, 0), Vector3(1.5707964, 6.2831855, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.4, 1.41),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_set_word"
}, {
"args": [],
"method": &"_set_definition"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_emhnf"]
_data = {
&"RESET": SubResource("Animation_emhnf"),
&"Spin": SubResource("Animation_vnck2")
}

[node name="Main" type="Node3D" unique_id=1859457304]
script = ExtResource("1_vnck2")
bgMusic = Array[AudioStream]([ExtResource("2_a2b50"), ExtResource("3_deq60"), ExtResource("4_7w1xu"), ExtResource("5_ih1d4"), ExtResource("6_p2g6k"), ExtResource("7_nkf2w"), ExtResource("8_vfltm")])

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=771290296]
environment = SubResource("Environment_uw6j2")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=191965026]
transform = Transform3D(0.2875, -0.62691945, 0.72409654, 0.206219, 0.7788014, 0.5924039, -0.9353169, -0.020993643, 0.3531881, 0, 0, 0)
light_color = Color(0, 0.5921569, 1, 1)
light_energy = 5.0
shadow_enabled = true
directional_shadow_blend_splits = true
sky_mode = 1

[node name="Panel" type="MeshInstance3D" parent="." unique_id=111755781]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
mesh = SubResource("BoxMesh_n87jj")

[node name="Word" type="Label3D" parent="Panel" unique_id=519088379]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0.01, 0)
pixel_size = 0.003
modulate = Color(0, 0.7885199, 0, 1)
autowrap_mode = 3
width = 555.0

[node name="Camera3D" type="Camera3D" parent="." unique_id=1431681227]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
fov = 28.0

[node name="ClickStuff" type="FlowContainer" parent="." unique_id=1441934141]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -83.0
offset_right = 350.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("9_p2g6k")
alignment = 1
vertical = true

[node name="Options" type="Button" parent="ClickStuff" unique_id=1690990294]
layout_mode = 2
theme_override_colors/font_color = Color(0.8745098, 0.2509804, 0.8745098, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
button_mask = 3
text = "Options"
flat = true

[node name="Subject" type="OptionButton" parent="ClickStuff" unique_id=1654182049]
layout_mode = 2

[node name="Music" type="CheckButton" parent="ClickStuff" unique_id=2012317695]
layout_mode = 2
theme_override_colors/font_color = Color(0.8745098, 0.2509804, 0.8745098, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
button_mask = 3
text = "Music"

[node name="Notes" type="Button" parent="ClickStuff" unique_id=1393209323]
layout_mode = 2
theme_override_colors/font_color = Color(0.8745098, 0.2509804, 0.8745098, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
button_mask = 3
text = "Notes"
flat = true

[node name="Button" type="Button" parent="ClickStuff" unique_id=133775697]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_a2b50")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_fmhtc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_a2b50")
theme_override_styles/hover = SubResource("StyleBoxFlat_7w1xu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ih1d4")
text = "Next"

[node name="Questions" type="Button" parent="ClickStuff" unique_id=347876057]
layout_mode = 2
theme_override_colors/font_color = Color(0.8745098, 0.2509804, 0.8745098, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
button_mask = 3
text = "Edit Questions
(Needs .JSON knowledge)"
flat = true

[node name="AddRemove" type="Button" parent="ClickStuff" unique_id=989690781]
layout_mode = 2
theme_override_colors/font_color = Color(0.8745098, 0.2509804, 0.8745098, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
button_mask = 3
text = "Add/remove
Questions"
flat = true

[node name="Host" type="Button" parent="ClickStuff" unique_id=1940827547]
visible = false
layout_mode = 2
text = "Host Questions"

[node name="Resins" type="Button" parent="ClickStuff" unique_id=1663063032]
layout_mode = 2
text = "Resin Stuff"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=693215841]
libraries/ = SubResource("AnimationLibrary_emhnf")

[node name="BGMusic" type="AudioStreamPlayer" parent="." unique_id=1116470802]
stream = ExtResource("3_deq60")
volume_db = -30.0

[node name="ClickSFX" type="AudioStreamPlayer" parent="." unique_id=1626177556]
stream = ExtResource("3_uw6j2")

[node name="AddRem" type="Panel" parent="." unique_id=1860146001]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_7w1xu")

[node name="Add" type="Button" parent="AddRem" unique_id=2075804320]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -4.0
offset_top = 243.0
offset_right = 4.0
offset_bottom = 251.0
grow_horizontal = 2
text = "Add"

[node name="Remove" type="Button" parent="AddRem" unique_id=776093303]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -4.0
offset_top = 404.0
offset_right = 4.0
offset_bottom = 412.0
grow_horizontal = 2
text = "Remove"

[node name="RemQ" type="VBoxContainer" parent="AddRem" unique_id=1298286448]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 375.0
offset_right = -375.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Question" type="OptionButton" parent="AddRem/RemQ" unique_id=1343227380]
layout_mode = 2

[node name="Label" type="Label" parent="AddRem/RemQ" unique_id=1100329230]
layout_mode = 2
text = "Choose a Question ^^^"
horizontal_alignment = 1

[node name="RemoveQ" type="Button" parent="AddRem/RemQ" unique_id=519644202]
layout_mode = 2
text = "Remove
"

[node name="AddQ" type="VBoxContainer" parent="AddRem" unique_id=481548343]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 375.0
offset_right = -375.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Q" type="LineEdit" parent="AddRem/AddQ" unique_id=2027240929]
layout_mode = 2
placeholder_text = "Question/Subject"
alignment = 1

[node name="Label" type="Label" parent="AddRem/AddQ" unique_id=128588452]
layout_mode = 2
horizontal_alignment = 1

[node name="Ans" type="LineEdit" parent="AddRem/AddQ" unique_id=906277203]
layout_mode = 2
placeholder_text = "Answer (Enter to submit / blank = new subject)"
alignment = 1

[node name="Hosts" type="Control" parent="." unique_id=82344471]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1004.0
offset_bottom = -206.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("13_ih1d4")

[node name="VBoxContainer" type="VBoxContainer" parent="Hosts" unique_id=159995602]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Join" type="Panel" parent="." unique_id=2080586955]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -282.0
offset_top = -173.0
offset_right = 282.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_p2g6k")

[node name="LineEdit" type="LineEdit" parent="Join" unique_id=269979722]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Enter Room Code"
alignment = 1

[node name="questions" type="CodeEdit" parent="." unique_id=1346312600]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 76.0
offset_top = 78.0
offset_right = -76.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="ClickStuff/Options" to="." method="_on_options_pressed"]
[connection signal="item_selected" from="ClickStuff/Subject" to="." method="_on_subject_item_selected"]
[connection signal="toggled" from="ClickStuff/Music" to="." method="_on_music_toggled"]
[connection signal="pressed" from="ClickStuff/Notes" to="." method="_on_notes_toggled"]
[connection signal="pressed" from="ClickStuff/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ClickStuff/Questions" to="." method="_on_questions_pressed"]
[connection signal="pressed" from="ClickStuff/AddRemove" to="." method="_on_add_remove_pressed"]
[connection signal="pressed" from="ClickStuff/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="ClickStuff/Resins" to="." method="_on_resins_pressed"]
[connection signal="finished" from="BGMusic" to="." method="_on_bg_music_finished"]
[connection signal="pressed" from="AddRem/Add" to="AddRem" method="_on_add_pressed"]
[connection signal="pressed" from="AddRem/Remove" to="AddRem" method="_on_remove_pressed"]
[connection signal="pressed" from="AddRem/RemQ/RemoveQ" to="AddRem" method="_on_remove_q_pressed"]
[connection signal="text_submitted" from="AddRem/AddQ/Q" to="AddRem" method="_on_q_text_submitted"]
[connection signal="text_submitted" from="AddRem/AddQ/Ans" to="AddRem" method="_on_q_text_submitted"]
[connection signal="text_submitted" from="Join/LineEdit" to="Join" method="_on_line_edit_text_submitted"]
